# cli-tts

./: .gitignore  .ruff.toml  README.md  legacy.py  main.py  pyproject.toml
util/: __init__.py  accentizer.py  player.py  ssml.py  tts.py  voicemod.py
