[tool.poetry]
name = "cli-tts"
version = "0.1.0"
description = ""
authors = ["SniperX <40890777+MaelstromDota@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
pygame = "^2.5.2"
simpleaudio = "^1.0.4"
num2words = "^0.5.13"
pydub = "^0.25.1"
soundfile = "^0.12.1"
ruaccent = "^1.5.6.3"
onnxruntime-gpu = "^1.17.1"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
