[tool.poetry]
name = "cli-tts"
version = "0.1.0"
description = ""
authors = ["SniperX <40890777+MaelstromDota@users.noreply.github.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/MaelstromDota/cli-tts"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
pygame = "^2.6.0"
simpleaudio = "^1.0.4"
num2words = "^0.5.13"
pydub = "^0.25.1"
soundfile = "^0.12.1"
ruaccent = "^1.5.8"
onnxruntime-gpu = "^1.19.2"
lxml = "^5.3.0"
numpy = "==1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
